eval best thresh

--- a/eval_feature_importance.ipynb
+++ b/eval_feature_importance.ipynb
@@ -192,6 +192,46 @@
     "fig.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from setup_general import *\n",
+    "from setup_embedding import *\n",
+    "data = train_prep.copy()\n",
+    "\n",
+    "X = data.drop('type', axis=1)\n",
+    "y = data.type\n",
+    "# at least xgboost cannot deal with string labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(y)\n",
+    "y = label_encoder.transform(y)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
+    "forest = pickle.load(open('./models/rf/train_prep_03_best' , 'rb'))\n",
+    "feature_names = X.columns.tolist()\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "print('go')\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
+    "start_time = time.time()\n",
+    "result = permutation_importance(\n",
+    "    forest, X_test, y_test, n_repeats=3, random_state=42, n_jobs=1\n",
+    ")\n",
+    "elapsed_time = time.time() - start_time\n",
+    "print(f\"Elapsed time to compute the importances: {elapsed_time:.3f} seconds\")\n",
+    "\n",
+    "forest_importances = pd.Series(result.importances_mean, index=feature_names)\n",
+    "fig, ax = plt.subplots(figsize=(500, 10))\n",
+    "forest_importances.plot.bar(yerr=result.importances_std, ax=ax)\n",
+    "ax.set_title(\"Feature importances using permutation on full model\")\n",
+    "ax.set_ylabel(\"Mean accuracy decrease\")\n"
+   ]
   }
  ],
  "metadata": {
