--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
     "from setup_general import *\n",
-    "data = combined_data.copy()"
+    "lang = 'est'\n",
+    "if lang == 'en':\n",
+    "    data = combined_data_fully_translated.copy()\n",
+    "if lang == 'est':\n",
+    "    data = combined_data.copy()"
    ]
   },
   {
@@ -28,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,29 +80,34 @@
     "# parameter_and_unit turned into one hot encoded features\n",
     "data= pd.get_dummies(data, columns=['parameter_and_unit'], prefix='', prefix_sep='')\n",
     "\n",
-    "# now put values into one hot encoded features\n",
-    "# for all new \"parameter with unit\" columns put the value in the column where a 1 is - others are 0 and remain 0\n",
+    "def extract_value(value, present):\n",
+    "    if present == 1:\n",
+    "        return value\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "#  for all new \"parameter with unit\" columns put the value in the column where a 1 is - others are 0 and remain 0\n",
     "for column in data.columns:\n",
-    "    if ' IN ' in column:\n",
-    "        data[column] = data.apply(lambda item: item['value'] * item[column], axis=1)\n",
+    "    if ' IN ' in column and '*' not in column:\n",
+    "        data[column] = data.apply(lambda item: extract_value(item['value'], item[column]), axis=1)\n",
     "\n",
     "# make all size features numeric\n",
     "def extract_height_width(item):    \n",
-    "    if type(item) == str:\n",
-    "        # Converting string to list\n",
-    "        res = item.strip('][').split(', ')\n",
-    "        h = float(res[0].strip('\\''))\n",
-    "        w = float(res[1].strip('\\''))\n",
-    "        return [h,w]\n",
-    "\n",
-    "    else:\n",
-    "        return [float('nan'), float('nan')]\n",
+    "    if item == 0:\n",
+    "        return [0.0,0.0]\n",
+    "    else:        \n",
+    "        return [float(i) for i in item]\n",
+    "        \n",
     "\n",
     "for column in data.columns:\n",
     "    # all the parameter with unit columns that contain arrays that are represeted as strings\n",
     "    if (' IN ' in column) and (data[column].dtype == object):\n",
     "        data[column + '_height'] = data.apply(lambda item: extract_height_width(item[column])[0], axis=1)\n",
     "        data[column + '_width'] = data.apply(lambda item: extract_height_width(item[column])[1], axis=1)\n",
+    "        pd.to_numeric(data[column + '_height'])\n",
+    "        pd.to_numeric(data[column + '_width'])\n",
+    "        data = data.drop(column, axis=1)\n",
     "\n",
     "for column in data.columns:\n",
     "    if (' IN ' in column):\n",
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13366/3136790389.py:83: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27412/1818565639.py:93: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -295,7 +304,17 @@
     "        return 0\n",
     "    else:\n",
     "        return 0\n",
-    "    \n",
+    "\n",
+    "def extract_year_from_name(row):\n",
+    "    name = row['name']\n",
+    "    start = row['start']\n",
+    "    if pd.isnull(start) and not pd.isnull(name):\n",
+    "        match = re.search('\\d\\d\\d\\d', name)\n",
+    "        if match:\n",
+    "            start = match.group()\n",
+    "    return start\n",
+    "\n",
+    "data['start'] = data[['name', 'start']].apply(extract_year_from_name, axis=1)    \n",
     "    \n",
     "#grouping applied to the dataframe\n",
     "data['startYear'] = data['start'].apply(year_Grouping)\n",
@@ -326,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,8 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "c7615067",
+   "execution_count": 231,
+   "id": "5fa6bb3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,18 +405,59 @@
     "    elif x in ['<patterned>', 'striped', 'checkered']:\n",
     "        return 'patterned'\n",
     "    else:\n",
-    "        return x"
+    "        return x\n",
+    "\n",
+    "#apply colour_grouping to the dataset\n",
+    "data['color'] = data['color'].apply(colour_grouping)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## technique - material - sizes (threshold previously encoded)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "5fa6bb3b",
+   "execution_count": 232,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105 columns found that start with technique_\n",
+      "111 columns found that start with material_\n"
+     ]
+    }
+   ],
    "source": [
-    "#apply colour_grouping to the dataset\n",
-    "data['color'] = data['color'].apply(colour_grouping)"
+    "perc = 0.96\n",
+    "threshold_sum = len(data) * perc\n",
+    "min_freq = 7\n",
+    "\n",
+    "tech = helpers.col_collection(data, 'technique_')\n",
+    "mat = helpers.col_collection(data, 'material_')\n",
+    "size = data.columns[data.columns.str.contains('IN')]\n",
+    "\n",
+    "features = [tech,mat,size]\n",
+    "\n",
+    "for feat in features:\n",
+    "    frequencies = {}\n",
+    "    for col in feat:\n",
+    "        frequencies[col] = data[col].sum()\n",
+    "    frequencies = dict(sorted(frequencies.items(), key=lambda item: item[1], reverse=True))\n",
+    "    instance_sum = 0\n",
+    "    for col in frequencies:\n",
+    "        frequency = frequencies[col]\n",
+    "        #if instance_sum > threshold_sum or frequency < min_freq:\n",
+    "        if frequency < min_freq:\n",
+    "            data.drop(columns=[col], inplace=True)\n",
+    "        instance_sum += frequency\n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -411,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,20 +479,17 @@
     "# already encoded\n",
     "# material, technique, unit, size, value\n",
     "\n",
-    "cols = ['musealia_additional_nr', 'collection_mark', 'musealia_mark', 'museum_abbr', 'before_Christ', 'is_original', 'class', 'parish', 'state',  'event_type', 'participants_role', 'parish', 'color', 'collection_additional_nr', 'damages', 'participant', 'location', 'name', 'commentary', 'text', 'legend', 'initial_info', 'additional_text']\n",
+    "cols = ['musealia_additional_nr', 'collection_mark', 'musealia_mark', 'museum_abbr', 'before_Christ', 'is_original', 'class', 'parish', 'state',  'event_type', 'participants_role', 'parish', 'color', 'collection_additional_nr', 'damages', 'participant', 'location', 'name', 'commentary', 'text', 'legend', 'initial_info', 'additional_text', 'country', 'city_municipality']\n",
     "\n",
     "text_features = ['name', 'commentary', 'text', 'legend', 'initial_info', 'additional_text']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
-    "perc = 0.9\n",
-    "threshold_sum = len(data) * perc\n",
-    "\n",
     "for col in cols:\n",
     "    data[col] = data[col].fillna('nan')\n",
     "    instance_sum = 0\n",
@@ -440,7 +497,7 @@
     "    values_to_group = []\n",
     "    for idx, name in enumerate(val_counts.index):\n",
     "        frequency = val_counts[idx]\n",
-    "        if instance_sum > threshold_sum or frequency < 7:\n",
+    "        if instance_sum > threshold_sum or frequency < min_freq:\n",
     "            values_to_group.append(name)\n",
     "\n",
     "        instance_sum += frequency\n",
@@ -452,23 +509,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "941"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(data.columns)"
+    "## Delete unneeded features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data.drop(columns=['full_nr','country_and_unit','parameter','unit','value'], inplace=True)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## continous numeric features (nan -> 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.replace(np.nan, 0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## rename for xgboost (cant deal with <>[] in feature names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in data.columns:\n",
+    "    if '>' in i:\n",
+    "        data.rename(columns={i:i.replace('>','')}, inplace=True)\n",
+    "    if '<' in i:\n",
+    "        data.rename(columns={i:i.replace('<','')}, inplace=True)\n",
+    "    if ']' in i:\n",
+    "        data.rename(columns={i:i.replace(']','')}, inplace=True)\n",
+    "    if '[' in i:\n",
+    "        data.rename(columns={i:i.replace('[','')}, inplace=True)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## resplit test/train\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/prepared_ready/prep_est.csv')\n",
+    "\n",
+    "train = data.loc[data['source']=='train'].drop('source',axis=1)\n",
+    "train, val = train_test_split(train, test_size=0.3, random_state=0)\n",
+    "test = data.loc[data['source']=='test'].drop('source',axis=1)\n",
+    "\n",
+    "train.to_csv(f'data/prepared_ready/train_{lang}_prepared.csv')\n",
+    "val.to_csv(f'data/prepared_ready/val_{lang}_prepared.csv')\n",
+    "test.to_csv(f'data/prepared_ready/test_{lang}_prepared.csv')"
    ]
   }
  ],
