split train to train, val and vote with est models

--- a/pred_xgboost.ipynb
+++ b/pred_xgboost.ipynb
@@ -18,7 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = train_est_smote100_full.copy()\n",
+    "val = val_est_prepared.copy()\n",
+    "\n",
+    "X_train = train.drop('type', axis=1)\n",
+    "y_train = train.type\n",
+    "\n",
+    "X_val = val.drop('type', axis=1)\n",
+    "y_val = val.type\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(y_train)\n",
+    "\n",
+    "y_train = label_encoder.transform(y_train)\n",
+    "y_val = label_encoder.transform(y_val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +53,7 @@
     "label_encoder = LabelEncoder()\n",
     "label_encoder = label_encoder.fit(labels)\n",
     "labels = label_encoder.transform(labels)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)"
+    "X_train, X_val, y_train, y_val = train_test_split(features, labels, test_size=0.3, random_state=0)"
    ]
   },
   {
@@ -76,26 +98,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9788095238095238"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bst = XGBClassifier(random_state=0)\n",
     "# fit model\n",
     "bst.fit(X_train, y_train)\n",
     "# make predictions\n",
-    "preds = bst.predict(X_test)\n",
-    "val_acc = accuracy_score(y_test, preds)\n",
+    "preds = bst.predict(X_val)\n",
+    "val_acc = accuracy_score(y_val, preds)\n",
     "val_acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.900952380952381"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds = bst.predict(X_val)\n",
+    "val_acc = accuracy_score(y_val, preds)\n",
+    "val_acc\n",
+    "# 0.9007142857142857 normal \n",
+    "# 0.900952380952381 est smote"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bst.save_model('models/xg/xg_model.json')"
+    "bst.save_model('models/xg/xg_est_data_smote100_full.json')"
    ]
   },
   {
@@ -135,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
