--- a/preparation.ipynb
+++ b/preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27412/1818565639.py:93: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_36092/1818565639.py:93: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 7,
    "id": "5fa6bb3b",
    "metadata": {},
    "outputs": [],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,8 @@
     }
    ],
    "source": [
-    "perc = 0.96\n",
+    "# best found combination (local optimum on 500 estimators)\n",
+    "perc = 0.98\n",
     "threshold_sum = len(data) * perc\n",
     "min_freq = 7\n",
     "\n",
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,10 +579,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "adsffj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
     "data.to_csv('data/prepared_ready/prep_est.csv')\n",
     "\n",
     "train = data.loc[data['source']=='train'].drop('source',axis=1)\n",
@@ -610,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
